Added more columns

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button class="btn" id="addRow">Add Row</button>
         </div>
         <div id="textAreaDiv">
-          <textarea id="nvramString" placeholder="Enter nvram string here
+          <textarea cols="6" id="nvramString" placeholder="Enter nvram string here
 Steps:
   * SSH into a DD-WRT enabled router
   * Enter the command &quot;nvram get static_leases&quot shown below
